--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>自分たちのサイト</title>
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <h1>自分たちのサイト</h1>
-        <p>これから作ります。</p>
+        <p class="red">これから作ります。</p>
     </body>
 </html>
