--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>自分たちのサイト</h1>
         <p class="red">これから作ります。</p>
+        <img src="img/sample.png" alt="サンプル">
     </body>
 </html>
