--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>チームのページ</h1>
         <p class="red">内容はこれから書きます。</p>
+        <img src="img/food_protein_bar.png" alt="プロテイン">
     </body>
 </html>
